# qt-cpp-template

./: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
